always set plugin for grepoutputview properly

BUG: 283852